# TDT4230-exam-practice

./: CMakeLists.txt
lib/: OBJ_Loader.hpp
shaders/: default.vert  duckie.frag  grass.frag  grassify.geom  hat.frag  no_camera.vert  normals.frag  screen.frag  showNormals.geo  showNormals.geom  tv_body.frag
src/: bezier.cpp  bezier.hpp  light.cpp  light.hpp  main.cpp  meshUtil.cpp  meshUtil.hpp  sceneGraph.cpp  sceneGraph.hpp  shaderUtil.cpp  shaderUtil.hpp
